--- a/package.json
+++ b/package.json
@@ -24,10 +24,18 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@types/aws-sdk": "^2.7.0",
     "@types/hapi__joi": "^17.1.9",
+    "amazon-cognito-identity-js": "^6.1.2",
     "aws-sdk": "^2.1310.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "jwks-rsa": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
